added: Delete task by clicking on their respective del button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="inputtime">
             <input type="time" class="time" id="inputtime">
         </div>
-        <input type="" name="text" id="inputtext" placeholder="Enter Task..">
+        <input type="" name="text" id="inputtext" placeholder="Enter Task.." maxlength="10">
         <div class="tickbtn"></div>
         <div class="table">
      
